backends/drm: don't allow implicit modifiers for multi gpu transfers

As we translate DRM_FORMAT_MOD_LINEAR to implicit modifiers + linear flag, the
egl import path should still work without implicit modifiers too.

BUG: 478921